有料切替プロセス修正